@@ -10,3 +10,4 @@ NEWS
   * Modified the log messages format (more details on errors, no source line)
   * Only try to connect to unix socket (not tcp) before spawning (fixes again #1575)
   * Only disconnect from terminal in fork mode (keep stderr/stdout open in nofork mode)
+  * Allow numerical user and group ids for -u/-g (fixes #1141)
